# baxtage

./: README.md  db.sqlite3  gpt.py  importer.py  manage.py  pyproject.toml  temp_backup  test.py
baxtage/: asgi.py  baxtage_dataclasses.py  flood.ods  pc.ods  settings.py  urls.py  wsgi.py
baxtage/utils_pss/: utils_pss.py  wi.py  workbook_importer.py
bench/: baxtage_dataclasses.py  funcs.py  importer.py  phone.py  temp_backup  test.py
classes/: baxtage_classes.py
journal/: brief.md  links.md  neo4j.md  scratch.md
lineup/: admin.py  equipment.py  funcs.py  models.py  people.py  rider.py  show.py  urls.py
lineup/migrations/: 0001_initial.py  0002_alter_performance_hospitality_alter_performance_tech.py  0003_alter_performance_hospitality_alter_performance_tech.py  0004_act_tour_eng.py  0005_techrider_mixer.py  0006_remove_performance_hospitality_and_more.py
lineup/static/: .~lock.amdespplay.ods#  .~lock.baxtage.ods#  .~lock.test.ods#  amdespplay.ods  baxtage.ods  baxtage_bak.ods
lineup/templates/: current_time_bar.html
src/baxtage/: app.py
src/baxtage/back/: db.py  routes.py  routes_api.py  routes_depends.py
src/baxtage/models/: documents.py  equipment.py  factory.py  links_db.py  maps.py  people.py  people_db.py  response.py  shared.py  show.py  show_db.py
src/baxtage/neo/: n4j.py  neo_fapi.py  neo_pyd.py  queries.py
src/baxtage/neo/models/: people.py  rels.py  show.py
tests/: conftest.py  test_app.py  test_event.py  test_models.py  test_neo.py  test_neon.py
